// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JoinPage render renders correctly 1`] = `
<div>
  <Script
    attributes={Object {}}
    onCreate={[Function]}
    onError={[Function]}
    onLoad={[Function]}
    url="https://www.google.com/recaptcha/api.js"
  />
  <CenteredLogo />
  <Panel
    accent={true}
    title="Sign Up"
  >
    <Panel.Section>
      <Connect(ReduxForm)
        onSubmit={[Function]}
      />
    </Panel.Section>
  </Panel>
  <Panel.Footer
    left={
      <small>
        Already have an account? 
        <UnstyledLink
          to="/auth"
        >
          Log In
        </UnstyledLink>
        .
      </small>
    }
  />
</div>
`;

exports[`JoinPage render renders errors 1`] = `
<div>
  <Script
    attributes={Object {}}
    onCreate={[Function]}
    onError={[Function]}
    onLoad={[Function]}
    url="https://www.google.com/recaptcha/api.js"
  />
  <CenteredLogo />
  <Panel
    accent={true}
    title="Sign Up"
  >
    <Panel.Section>
      <Error
        error={
          <JoinError
            data={Object {}}
            errors={Object {}}
          />
        }
      />
    </Panel.Section>
    <Panel.Section>
      <Connect(ReduxForm)
        onSubmit={[Function]}
      />
    </Panel.Section>
  </Panel>
  <Panel.Footer
    left={
      <small>
        Already have an account? 
        <UnstyledLink
          to="/auth"
        >
          Log In
        </UnstyledLink>
        .
      </small>
    }
  />
</div>
`;
